metadata/force-app/main/default/objects/Custom_Contact__c/fields/Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest__c</fullName>
    <label>Product Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>AA</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>BB</fullName>
            </value>
            <value>
                <fullName>BBB</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>DD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>