metadata/force-app/main/default/objects/Custom_Contact__c/fields/Professional_Entity__c.field-meta.xml
<CustomField>
    <fullName>Professional_Entity__c</fullName>
    <label>Professional Entity</label>
    <referenceTo>Professional_Entity__c</referenceTo>
    <relationshipLabel>Custom Contacts</relationshipLabel>
    <relationshipName>Custom_Contacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>